[package]
author = "Harlan Heilman <Harlan.Heilman@wsu.edu>"
description = "Rust CLI to Install Igor Repositories."
edition = "2021"
license = "GPL-2.0"
name = "ipac"
repository = "https://github.com/WSU-Carbon-Lab/iir/tree/main"
version = "0.1.4"
website = "https://docs.rs/crate/iir/latest"

[dependencies]
anyhow = "1.0.87"
dirs = "5.0.1"
git2 = "0.19.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.17"
